// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eq case 1 1`] = `
VList [
  Array [
    "div",
  ],
  Array [
    "div",
  ],
  Array [
    "text",
  ],
  Array [
    "span",
  ],
]
`;

exports[`eq case 2 1`] = `
VList [
  Array [
    "text",
  ],
  Array [
    "div",
  ],
  Array [
    "span",
  ],
  Array [
    "text",
  ],
]
`;

exports[`eq case 3 1`] = `
VList [
  Array [
    "foo",
    Object {
      "key": 1,
      "ref": true,
    },
  ],
  Array [
    "foo",
    Object {
      "key": 3,
      "ref": true,
    },
  ],
]
`;

exports[`eq case 4 1`] = `
VList [
  Array [
    "bar",
  ],
]
`;

exports[`eq case 5 1`] = `
<div>
  <span />
  <span />
  <span />
</div>
`;

exports[`eq case 5 2`] = `
<div>
  <!---->
</div>
`;
